deployment/yaml/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deno-rest-api
  labels:
    app: deno-rest-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deno-rest-api
  template:
    metadata:
      labels:
        app: deno-rest-api
    spec:
      containers:
        - name: deno-rest-api
          image: faroukbouhassine/deno:1.2
          ports:
            - containerPort: 8000
