deployment/yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-rest-api
spec:
  selector:
    app: deno-rest-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
